--- a/src/App.css
+++ b/src/App.css
@@ -84,8 +84,8 @@ nav > ul a:hover{
     width: 35%;
     height: 350px;
     position: absolute;
-    top: 90px;
-    left: 120px;
+    top: 100px;
+    left: 240px;
     z-index: 1;
 }
 /*##########section-1########## */
@@ -103,32 +103,40 @@ nav > ul a:hover{
 /*##########section-3########## */
 /*##########section-4########## */
 .section-4{
+    justify-content: center;
+    align-items: center;
+    border: 2px solid red;
     margin-bottom: 20px;
 
 }
-.contact-form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    /* border: 2px solid red; */
-}
 .section-4 img {
     width: 30%;
+    position: absolute;
+    z-index: -3;
+    left: 0;
 }
-form{
+.contact-form{
+    width: 40%;
+    height: 510px;
+    padding: 15px;
+    border-radius: 10px;
+    /* box-shadow:  68% 48% 58% 48% / 48% 78% 48% 98% red; */
+    background-color: var(--white);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+.contact-form input, button{
+    width: 100%;
+    height: 35px;
     padding: 10px;
     border-radius: 10px;
-    box-shadow:  0px 0px 10px 2px black;
-    background-color: var(--blue-gray-1);
-    display: flex;
-    align-items: center;
-    /* flex-direction: column; */
+    /* border: none; */
 }
-form fieldset {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.contact-form  textarea{
+    width: 100%;
+    border-radius: 10px;
 }
 /*##########section-4########## */
 /* ===============sections================ */
@@ -148,7 +156,7 @@ form fieldset {
     fill : var(--blue-gray-1);
     width: 100%;
     position: relative;
-    top: -26px;
+    top: -25px;
     left: 0;
 }
 .footer-content{
