--- a/src/components/small-components/display.css
+++ b/src/components/small-components/display.css
@@ -10,3 +10,24 @@
     justify-content: center;
     align-items: center;
 }
+.inner-content,
+.inner-arrow{
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.inner-icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 5px;
+    font-size: large;
+    color: green;
+    background-color: black;
+    width: 65.5%;
+    position: relative;
+    top: 63px;
+    right: -2px;
+}
