--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 :root{
-    --blue-gray-1: rgba(59, 96, 105, 0.755);
+    --blue-gray-1: rgba(59, 96, 105, 0.9);
+    --bg-1: rgb(248, 251, 250);
     --blue-gray-2: rgba(39, 78, 83, 0.8);
     --white: white;
 
@@ -99,43 +100,86 @@ nav > ul a:hover{
 }
 /*##########section-2########## */
 /*##########section-3########## */
-
+.section-3{
+    padding-top: 50px;
+    flex-direction: column;
+    align-items: center;
+    color: var(--white);
+    background-color: var(--blue-gray-1);
+}
+.projects-head{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px;
+}
+.projects-head p{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+.projects-content{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: auto 3fr 3fr;
+}
 /*##########section-3########## */
 /*##########section-4########## */
 .section-4{
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
     margin-bottom: 20px;
-
 }
-.section-4 img {
+.section-4 img{
     width: 30%;
-    position: absolute;
-    z-index: -3;
-    left: 0;
+    position: relative;
+    z-index: -1;
+    opacity: 0.6;
+}
+.section-4 .img1 {
+    right: -160px;
+    top: 60px;
+    rotate: -45deg;
+}
+.section-4 .img2 {
+    right: 170px;
+    top: -10px;
+    /* rotate: -0deg; */
 }
 .contact-form{
     width: 40%;
     height: 510px;
     padding: 15px;
     border-radius: 10px;
-    /* box-shadow:  68% 48% 58% 48% / 48% 78% 48% 98% red; */
-    background-color: var(--white);
+    box-shadow:  68px, 4px, 58px, 48px red;
+    background-color: var(--blue-gray-1);
+    color: var(--white);
     display: flex;
     justify-content: center;
     flex-direction: column;
     box-sizing: border-box;
 }
+.contact-form span{
+    color: red;
+}
 .contact-form input, button{
     width: 100%;
-    height: 35px;
+    height: 40px;
     padding: 10px;
     border-radius: 10px;
-    /* border: none; */
+    border: none;
+}
+.contact-form .input-inline{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+.contact-form .input-inline > div{
+    width: 50%;
 }
 .contact-form  textarea{
     width: 100%;
+    padding: 10px;
     border-radius: 10px;
 }
 /*##########section-4########## */
