--- a/src/components/small-components/projectCard.css
+++ b/src/components/small-components/projectCard.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    background: #000;
+    background: var(--bg-1);
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
