--- a/src/App.css
+++ b/src/App.css
@@ -153,10 +153,18 @@ nav > ul a:hover{
     box-shadow:  68px, 4px, 58px, 48px red;
     background-color: var(--blue-gray-1);
     color: var(--white);
+    font-weight: bold;
     display: flex;
     justify-content: center;
     flex-direction: column;
     box-sizing: border-box;
+}
+.contact-form h2{
+    text-align: center;
+    margin: 10px;
+}
+.contact-form label{
+    margin: 0px 0px 2px 10px;
 }
 .contact-form span{
     color: red;
